# mailnex

./: .gitignore  INSTALL  README  USER.README  cmdprompt.py  development_docs.txt  email-archive.py  imap4.py  implementation_notes.txt  mailnex  pyproject.toml  requirements.txt  settings.py  setup.py  thoughts
doc/: mailnex.1
experiments/: address-complete-prompt.py  cmdtest.py  email-test.py  event.py  eventspawn.py  gpgme-sign.py  gpgme-verify.py  imaptest.py  mailnex.desktop  messaging-menu.py  polltest.py  prompt-event.py  prompt-test.py  urwid-test.py  xapian-test.py
mailnex/: .mailnex.py.swp  __main__.py  cmdprompt.py  composer.py  decorators.py  exceptions.py  imap4.py  mailnex.py  pathcompleter.py  printfStyle.py  settings.py  smtp.py
